fixing redirection problems

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -98,7 +98,7 @@
         <ul>
           <li><a href="#">projets</a></li>
           <li><a href="#">contact</a></li>
-          <li><a href="login2.html" id="login-btn">Login</a></li>
+          <li><a href="login.html" id="login-btn">Login</a></li>
           <li><a href="INDEX.html" id="logout-btn" style="display: none;">Logout</a></li>
           </li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
@@ -168,9 +168,9 @@
       </nav>
     </footer>
 
-    <script src="js/v3.js"></script>
-    <script src="js/logincg.js"></script> 
-    <script src="js/v3login.js"></script> 
+    <script src="assets/js/index.js"></script>
+    <script src="assets/js/login.js"></script> 
+    
     
   </body>
 </html>
