--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -43,7 +43,7 @@
         </ul>
     </nav>
 </footer>
-<script src="js/logincg.js"></script>
-<script src="js/"></script>
+<script src="assets/js/login.js"></script>
+
 </body>
 </html>
