correction de la saisie du titre lors de l'ajout d'une image

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -73,8 +73,7 @@
             </div>
             <div class="add-modal">
               <label for="title-modal">Titre</label>
-              <div id="notitle"></div>
-              <input type="text" id="title-modal" />
+              <input type="text" id="title-modal" required/>
             </div>
             <div class="add-modal">
               <label for="categorie-modal">Catégorie</label>
